# rust_rocket_noteapp

./: .gitignore  README.md  TODO.md
backend/: .env  Cargo.toml
backend/migrations/: 20210817200303_notes.sql
backend/src/: main.rs  structs.rs
frontend/: Cargo.toml  index.html  style.css
frontend/src/: main.rs  structs.rs
